styles/components.css
/* Button */
.btn-primary {
    cursor: pointer;
    color: var(--text-primary);
    background-color: var(--button-bg);
    border: 2px solid var(--button-border);
    border-radius: 5px;
    box-shadow: 0 4px 8px var(--shadow-default), 
    0 0 10px var(--shadow-highlight);
    padding: 16px;
    font-size: 16px;
    transition: 0.5s;   
}

.btn-primary:hover {
    border-color: var(--button-hover-border);
    box-shadow: 0 6px 12px var(--shadow-default), 
                0 0 15px var(--shadow-highlight);
    background-color: var(--bg-color);
    transform: scale(1.1);
}

/* Navbar */
.navbar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: var(--bg-color);
    margin: 0 auto;
    padding: 24px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    border-bottom: 1px solid var(--secondary-color);
    box-shadow: 1px 1px 8px var(--secondary-color);
    z-index: 999;
}

nav {
    display: flex;
    align-items: center;
}

.nav-btn {
    display: none;
    cursor: pointer;
    height: 35px;
    width: 35px;
    z-index: 5;
    position: absolute;
}

.nav-btn span {
    position: absolute;
    background-color: var(--text-primary);
    width: 100%;
    height: 4px;
    border-radius: 5px;
    top: 50%;
    left: 50%;
    transition: .3s ease;
    transform: translate(-50%, -50%);
}

.nav-btn span:first-child {
    top: 25%
}

.nav-btn span:last-child {
    top: 75%
}

.nav-btn.active span:first-child {
    top: 50%;
    transform: translate(-50%, -50%) rotate(45deg);
}

.nav-btn.active span:nth-child(2) {
    opacity: 0;
}

.nav-btn.active span:last-child {
    top: 50%;
    transform: translate(-50%, -50%) rotate(-45deg);
}

.nav-links {
    list-style-type: none;
}

.nav-links li {
    display: inline-block;
}

.nav-links a {
    display: inline-block;
    margin-right: 32px;
}

.lang-switcher {
    display: inline-flex;
    gap: 24px;
    font-size: 24px;
}

.lang-switcher i {
    cursor: pointer;
    transition: transform .3s;
}

.lang-switcher i:hover {
    transform: scale(1.2);
}

/* Hero Section */
.hero-pic {
    width: 300px;
    height: 300px;
    min-width: 300px;
    border-radius: 50%;
    overflow: hidden;
    border: 10px solid var(--secondary-color);
    box-shadow: 0px 10px 20px var(--shadow-default),;
}

.hero-pic img {
    height: 100%;
    width: 100%;
    transition: 0.5s;
}

.hero-pic img:hover {
    transform: scale(1.2);
}

.hero-info {
    display: flex;
    flex-direction: column;
    gap: 32px;
    padding: 0 32px;
}

.hero-text {
    display: flex;
    flex-direction: column;
}

.hero-text h5 {
    color: var(--text-primary);
    font-size: 14px;
}

.hero-text h5 span {
    color: var(--primary-color);
    font-size: 16px;
}

.hero-text h1 {
    color: var(--primary-color);
    font-size: 48px;
}

.hero-text p {
    color: var(--text-primary);
    max-width: 900px;
}

.hero-actions {
    display: flex;
    align-items: center;
    gap: 32px;
}

.hero-buttons {
    display: flex;
    flex-wrap: wrap;
    gap: 32px;
}

.hero-icons {
    display: flex;
    gap: 32px;
    font-size: 48px;
}

/* Skills Section */
.skill-category {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    width: 25%;
    margin-bottom: 32px;
}

.skill-category h3 {
    font-size: 24px;
    margin-bottom: 32px;
    color: var(--text-primary);
}

.skill-category ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 32px;
    list-style: none;
    padding: 0;
}

.skill-category li {
    text-align: center;
    width: 26%;
}

.skill-category img {
    width: 50px;
    height: 50px;
}

/* Timeline */
.timeline {
    width: 100%;
    border-left: 2px solid var(--text-primary);
}

.timeline:last-child {
    margin-bottom: 0;
}

.timeline .timeline-item:last-child {
    margin-bottom: 0;
}

.timeline-item {
    margin-bottom: 32px;
}

.timeline-item .bullet {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background-color: var(--text-primary);
    position: absolute;
    left: 24px;
    z-index: 1;
}

.timeline-card {
    color: var(--text-primary);
    background-color: var(--bg-color);
    padding: 24px;
    margin-left: 40px;
    border: 2px solid var(--text-primary);
    border-radius: 8px;
    max-width: 960px;
    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
}

.timeline-card:hover {
    border-color: var(--primary-color);
    transform: scale(1.05);
    box-shadow: 0px 8px 16px var(--shadow-highlight);
}

.timeline-card .timeline-card-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid var(--text-primary);
    margin-bottom: 6px;
    gap: 24px;
}

.timeline-card .timeline-card-title span {
    font-size: 16px;
    font-weight: 600;
    min-width: 205px;
}

.timeline-card .timeline-card-title span i {
    margin-right: 8px;
}

.timeline-card .timeline-card-subtitle {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 14px;
    font-style: italic;
    gap: 24px;
}

.timeline-card .timeline-card-subtitle span i {
    margin-right: 8px;
}

.timeline-card ul {
    margin-top: 16px;
    margin-left: 16px;
}

.timeline-card ul li {
    margin-bottom: 8px;
}

.timeline-card ul li:last-child {
    margin-bottom: 0;
}

/* Contact */
.contact-card {
    font-size: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 32px;
    max-width: 960px;
    padding: 48px;
    border: 2px solid var(--border-primary);
    border-radius: 8px;
    box-shadow: 0 6px 32px var(--shadow-default), 
                0 0 24px var(--shadow-highlight);
}

.contact-info {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.contact-info a:hover {
    transform: scale(1.05);
}

.contact-info i {
    margin-right: 8px;
}

@media(max-width: 1024px) {
    /* Navbar */
    .nav-btn {
        display: initial;
    }

    .nav-links {
        position: absolute;
        top: var(--navbar-height);
        left: -100%;
        bottom: 0;
        width: 80%;
        height: 100vh;
        background-color: var(--bg-color);
        z-index: 3;
        box-shadow: -5px 13px 30px rgba(0, 0, 0, 0.1);
        transition: 0.5s;
        padding: 25px 0px;
    }

    .nav-links li {
        display: block;
    }
    
    .nav-links li a {
        display: block;
        margin-right: 0;
        margin-bottom: 15px;
        text-align: center;
    }

    .nav-links.open {
        left: 0;
    }

    /* Hero Section */
    .hero-actions {
        flex-direction: column;
        align-items: flex-start;
    }

    /* Skills Section */
    .skill-category {
        width: 50%;
    }

    .skill-category li {
        width: 38%;
    }

    /* Form */
    .input-group {
        flex-direction: column;
    }
}

@media (max-width: 768px) {
    /* Hero Section */
    .hero-text {
        padding: 40px 0;
    }
    /* Skills Section */
    .skill-category {
        width: 100%; /* 1 per row */
    }

    /* Timeline */
    .timeline-card .timeline-card-title,
    .timeline-card .timeline-card-subtitle {
        flex-direction: column; /* Stack text vertically */
        text-align: center;
        gap: 8px;
    }
}

